`Run a Query` modal

--- a/index.html
+++ b/index.html
@@ -342,7 +342,10 @@
                       <option value="25">25</option>
                     </select>
                   </div>
-                  <span class="pagination-range">1-7 of 7</span>
+                  <span class="pagination-range">
+                    <span style="font-weight: 600">1-7</span> of
+                    <span style="font-weight: 600">7</span></span
+                  >
                   <div class="pagination-buttons">
                     <button class="pagination-button prev-button">
                       <img
